# nix-upload-daemon

./: Cargo.toml  flake.nix  overlay.nix
modules/: common.nix  darwin.nix  default.nix  nixos.nix  wrapper.nix
src/: binding.rs  daemon.rs  lib.rs  main.rs  upload.rs
